fixes paragraph spacing in singles

--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -30,7 +30,7 @@ li:last-child .#{$module} {
 
 .#{$module}-single {
   @include dropcaps;
-  @include alpha;
+  // @include alpha;
   padding: 0 1em 1em 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid $link-color;
